# raytracer

./: .gitignore  CMakeLists.txt  README.md  gradient.ppm
.github/workflows/: main.yaml
demos/axis_transfer/: CMakeLists.txt  axis_transfer.sv  axis_transfer_test.cc  gradient.sv  gradient_test.cc  tb_axis_transfer.sv
hw/: ufp_add.sv  ufp_if.sv  ufp_resize.sv
hw/coprocessor/: CMakeLists.txt  coprocessor.v  dp_ram_dist.v  dp_ram_dist_flat.v  raytracer_axis.sv  render_core.sv
hw/coprocessor/tests/: CMakeLists.txt  coprocessor_test.cc  tb_axis.sv  vec3.h
hw/demos/axis_transfer/: CMakeLists.txt  axis_transfer.sv  axis_transfer_test.cc  gradient.sv  simple_transfer.v
hw/hls/: camera.hpp  hls_config.cfg  main.cpp  main.hpp  main_v1.cpp  parameters.hpp  scene.hpp  testbench.cpp
hw/hls/math/: interval.hpp  ray.hpp  vec3.hpp
hw/math/: macros.svh
hw/math/fp_core/: CMakeLists.txt  clip_signed.sv  clip_unsigned.sv  sfp_add.sv  sfp_add_full.sv  sfp_if.sv  sfp_mul.sv  sfp_mul_full.sv  sfp_resize.sv  sfp_sub.sv  sfp_sub_full.sv  ufp_from_real.sv  ufp_if.sv  ufp_mul.sv
hw/math/fp_core/tests/: CMakeLists.txt  clip_unsigned_test.cc  clip_unsigned_wrapper.sv  resize_down_test.cc  resize_down_test.sv  resize_up_test.sv  sfp_add_test.cc  sfp_add_wrapper.sv  sfp_sub_test.cc  sfp_sub_wrapper.sv  ufp_mul_test.cc  ufp_mul_wrapper.sv
hw/math/fp_vec/: CMakeLists.txt  sfp_vec3_cross.sv  sfp_vec3_dot.sv  sfp_vec_add.sv  sfp_vec_add_s.sv  sfp_vec_lerp.sv  sfp_vec_mul.sv  sfp_vec_mul_s.sv  sfp_vec_neg.sv  sfp_vec_sub.sv
hw/math/fp_vec/tests/: CMakeLists.txt  sfp_vec3_cross_test.cc  sfp_vec3_cross_wrapper.sv  sfp_vec_add_s_test.cc  sfp_vec_add_s_wrapper.sv  sfp_vec_dot_test.cc  sfp_vec_dot_wrapper.sv  sfp_vec_lerp_test.cc  sfp_vec_lerp_wrapper.sv
hw/rt/: CMakeLists.txt  coprocessor.v  dp_block_ram.sv  goldschmidt.sv  parameters.vh  rt_alu.sv  rt_camera_t.svh  rt_controller.sv  rt_core.sv  rt_core_wrapper.sv  rt_rgu.sv  rt_rgu_5_stage.sv
hw/rt/tests/: CMakeLists.txt  clock.xdc  color.h  coprocessor_test.cc  expected.mem  generate_test_data.cc  goldschmidt_test.cc  goldschmidt_wrapper.sv  interval.h  ray.h  rt_controller_test.cc  rt_core_test.cc  rt_rgu_tb.sv  rt_rgu_test.cc  rt_rgu_wrapper.sv  scene.h  tb_axis.sv  test_helpers.h  vec3.h
hw/rt/tests/data/: camera.mem  pixels.mem
hw/tests/: CMakeLists.txt  clipping_test.cc  clipping_test.sv  resize_test.sv  ufp_mul_test.cc  ufp_mul_test.sv
sw/mpsoc/: color.hpp  hittable.hpp  interval.hpp  main.cc  random.hpp  ray.hpp  scene.hpp  vec3.hpp
sw/rsqrt/: goldschmidt_rsqrt.py
